# ngtlibcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  config.json  erase_comments.ps1  library.sh  libtest.sh  make_snippet.sh  ngtbuild.ps1  out.json  readme.md  run_test.sh  script.ps1  tempCodeRunnerFile.ps1  training.md  training.ps1
test/: CMakeLists.txt  bat.cpp  bellman_ford.cpp  bstree.cpp  ceil2.cpp  centroid_tree.cpp  coenumerate_enumerate.cpp  compress.cpp  diameter_of_graph.cpp  dijkstra-test.cpp  disjoint_set-test.cpp  extend.cpp  floyd_warshall.cpp  fmt.cpp  heavy_light_decomposition.cpp  insert_bit.cpp  io-test.cpp  kmp_algorithm-test.cpp  lowest_common_ancestor.cpp  main.cpp  max_rengesum.cpp  maximum_flow-test.cpp  minimum_cost_flow-test.cpp  mo.cpp  polynominal-test.cpp  remove_bit.cpp  runlength.cpp  segment_tree-test.cpp  segment_tree.cpp  shortest_cycle.cpp  sliding_minimum-test.cpp  sparse_table.cpp  sqrt_decomposition.cpp  static_sieve.hpp  strongly_connected_component_decomposition.cpp  substring_search-test.cpp  suffix_array-test.cpp  trie-test.cpp  two_edge_deomposition.cpp  utility.hpp  (+4 more)
test/algorighm/: algorithm-test.cpp  compress.cpp  max_rangesum.cpp  runlength.cpp  zip_zip_2.cpp
test/algorighm-test/: algorithm-tesh.cpp  algorithm-test.cpp
test/bellman_ford-test/: bellman_ford-test.cpp
test/bit_operations/: bat.cpp  ceil2.cpp  insert_bit.cpp  remove_bit.cpp
test/dijkstra-test/: dijkstra-test.cpp
test/dinic-test/: dinic-test.cpp
test/disjoint_set/: disjoint_set-test.cpp
test/disjoint_set-test/: disjoint_set-test.cpp
test/exp-test/: exp.cpp
test/exp2-test/: exp2.cpp
test/flow/: minimum_cost_flow-test.cpp
test/graph/: dijkstra-test.cpp  floyd_warshall.cpp  shortest_cycle.cpp  two_edge_deomposition.cpp
test/heavy_light_decomposition-test/: heavy_light_decomposition.cpp
test/io-test/: io-test.cpp
test/kmp_algorithm-test/: kmp_algorithm-test.cpp
test/max_flow-test/: maximum_flow-test.cpp
(+554 files in other folders)
